--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,6 @@
 FROM python:3.8
-CMD mkdir /blockchain_files
+ENV STORAGE_MANAGER_HOST=storage_manager STORAGE_MANAGER_READ_PORT=12346 STORAGE_MANAGER_MINED_PER_MINUTE_PORT=12347
+ENV BLOCK_BUILDER_HOST=blockchain_server BLOCK_BUILDER_PORT=12345
+ENV BLOCK_APPENDER_HOST=blockchain_server MINED_COUNTER_PORT=12346
 COPY ./client /
 COPY ./common /common
